samples/_failures_safe/1761004534_01e17a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f20d085e.c: In function ‘main’:
./samples/SAFE/__tmp_f20d085e.c:154:22: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  154 |     if (mat1.cols == mat
      |                      ^~~
      |                      mat2
./samples/SAFE/__tmp_f20d085e.c:154:22: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f20d085e.c:154:25: error: expected ‘)’ at end of input
  154 |     if (mat1.cols == mat
      |        ~                ^
      |                         )
./samples/SAFE/__tmp_f20d085e.c:154:5: error: expected declaration or statement at end of input
  154 |     if (mat1.cols == mat
      |     ^~
